# face-recognition

./: .gitignore  Cargo.toml  LICENSE  README.md  face_cache.db  faces.db
src/: database.rs  download_fix.rs  main.rs  models.rs  utils.rs
