[package]
name = "face-recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }
minifb = "0.25"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
